--- a/node/index.html
+++ b/node/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KendoUI Test Page</title>
-
+    <title>Net Control Test Page</title>
     <link href="http://cdn.kendostatic.com/2013.1.514/styles/kendo.common.min.css" rel="stylesheet" />
     <link href="http://cdn.kendostatic.com/2013.1.514/styles/kendo.default.min.css" rel="stylesheet" />
     <script src="socket.io/socket.io.js"></script>
@@ -94,7 +93,6 @@
         console.log("Slide :: new slide value is: " + e.value);
 
     }
-
 
     function sliderOnChange(e) {
         //kendoConsole.log("Change :: new value is: " + e.value);
